// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: non-project admin 1`] = `
<Alert
  display="banner"
  variant="warning"
>
  <FormattedMessage
    defaultMessage="component_navigation.pr_deco.error_detected_X"
    id="component_navigation.pr_deco.error_detected_X"
    values={
      {
        "action": "component_navigation.pr_deco.action.contact_project_admin",
      }
    }
  />
</Alert>
`;

exports[`should render correctly: project admin 1`] = `
<Alert
  display="banner"
  variant="warning"
>
  <FormattedMessage
    defaultMessage="component_navigation.pr_deco.error_detected_X"
    id="component_navigation.pr_deco.error_detected_X"
    values={
      {
        "action": <ForwardRef(Link)
          to={
            {
              "pathname": "/project/settings",
              "search": "?id=my-project&category=pull_request_decoration_binding",
            }
          }
        >
          component_navigation.pr_deco.action.check_project_settings
        </ForwardRef(Link)>,
      }
    }
  />
</Alert>
`;
